[gd_scene load_steps=39 format=2]

[ext_resource path="res://scripts/transition.gd" type="Script" id=1]
[ext_resource path="res://sprites/fundo loja.png" type="Texture" id=2]
[ext_resource path="res://sprites/moedas.png" type="Texture" id=3]
[ext_resource path="res://scenes/poupanca.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/sair.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/proxB.png" type="Texture" id=6]
[ext_resource path="res://sprites/anterB.png" type="Texture" id=7]
[ext_resource path="res://sprites/comprarButtom.png" type="Texture" id=8]
[ext_resource path="res://sprites/notebook.png" type="Texture" id=9]
[ext_resource path="res://fontes/loja1.fnt" type="BitmapFont" id=10]
[ext_resource path="res://animacao/moedas-banco.tres" type="Animation" id=11]
[ext_resource path="res://sprites/moeda1.png" type="Texture" id=12]
[ext_resource path="res://sprites/moeda2.png" type="Texture" id=13]
[ext_resource path="res://sprites/moeda3.png" type="Texture" id=14]
[ext_resource path="res://music/click.ogg" type="AudioStream" id=15]
[ext_resource path="res://music/audio-fundo.ogg" type="AudioStream" id=16]
[ext_resource path="res://music/moedas.ogg" type="AudioStream" id=17]
[ext_resource path="res://sprites/perg.png" type="Texture" id=18]
[ext_resource path="res://fontes/mediacao1.fnt" type="BitmapFont" id=19]
[ext_resource path="res://fontes/mediacao2.fnt" type="BitmapFont" id=20]
[ext_resource path="res://sprites/b3.png" type="Texture" id=21]

[sub_resource type="Animation" id=1]

resource_name = "moedas"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("moeda1:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 1, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160.834, 92.0805 ), Vector2( 160.834, 92.0805 ), Vector2( 320.834, 461.08 ), Vector2( 320.834, 891.08 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("moeda2:position")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 1, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160.834, 92.0805 ), Vector2( 204.834, 92.0805 ), Vector2( 364.834, 461.08 ), Vector2( 364.834, 891.08 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("moeda3:position")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 1, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160.834, 92.0805 ), Vector2( 106.834, 92.0805 ), Vector2( 266.834, 461.08 ), Vector2( 266.834, 891.08 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("moeda4:position")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 1, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160.834, 92.0805 ), Vector2( 142.834, 157.08 ), Vector2( 302.834, 526.08 ), Vector2( 302.834, 956.08 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("moeda5:position")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 1, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160.834, 92.0805 ), Vector2( 194.834, 134.08 ), Vector2( 354.834, 503.08 ), Vector2( 354.834, 933.08 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("moeda6:position")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 1, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160.834, 92.0805 ), Vector2( 160.834, 116.08 ), Vector2( 320.834, 485.08 ), Vector2( 320.834, 861.08 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("moeda1:visible")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("moeda2:visible")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("moeda3:visible")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("moeda4:visible")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("moeda5:visible")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("moeda6:visible")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="loja" type="Node"]

script = ExtResource( 1 )

[node name="Fundo" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false

[node name="moeda" type="Sprite" parent="."]

position = Vector2( 368.233, 819.967 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.04
one_shot = false
autostart = false

[node name="poupanca" parent="." instance=ExtResource( 4 )]

editor/display_folded = true

[node name="Sprite" parent="poupanca"]

editor/display_folded = true
position = Vector2( 139.707, 65 )

[node name="menu-banco" parent="poupanca"]

position = Vector2( 182.098, 78.6843 )

[node name="Label" parent="poupanca"]

margin_left = 346.0
margin_top = 126.0
margin_right = 542.0
margin_bottom = 182.0

[node name="sair" parent="poupanca" instance=ExtResource( 5 )]


[node name="proximo" type="TouchScreenButton" parent="."]

position = Vector2( 521, 589 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="anterior" type="TouchScreenButton" parent="."]

position = Vector2( 86, 589 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 7 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="comprar" type="TouchScreenButton" parent="."]

position = Vector2( 125, 1002 )
scale = Vector2( 0.47, 0.47 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="premio" type="Sprite" parent="."]

position = Vector2( 286.407, 620.625 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )
centered = false

[node name="comprarL" type="Label" parent="."]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 138.0
margin_top = 1034.0
margin_right = 427.0
margin_bottom = 1123.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.171875, 0.171875, 0.171875, 1 )
text = "Adquirido"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="premioL" type="Label" parent="."]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 55.0
margin_top = 556.0
margin_right = 666.0
margin_bottom = 645.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "PrÃªmio"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="preco" type="Label" parent="."]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 305.0
margin_top = 780.0
margin_right = 434.0
margin_bottom = 869.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "XXXX"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Anim" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/moedas = SubResource( 1 )
anims/moedas-banco = ExtResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="moeda1" type="Sprite" parent="."]

visible = false
position = Vector2( 320.834, 891.08 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 12 )
centered = false

[node name="moeda2" type="Sprite" parent="."]

visible = false
position = Vector2( 364.834, 891.08 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 13 )
centered = false

[node name="moeda3" type="Sprite" parent="."]

visible = false
position = Vector2( 266.834, 891.08 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 14 )
centered = false

[node name="moeda4" type="Sprite" parent="."]

visible = false
position = Vector2( 302.834, 956.08 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 12 )
centered = false

[node name="moeda5" type="Sprite" parent="."]

visible = false
position = Vector2( 354.834, 933.08 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 13 )
centered = false

[node name="moeda6" type="Sprite" parent="."]

visible = false
position = Vector2( 320.834, 861.08 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 14 )
centered = false

[node name="click-buttom" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 15 )
playing = false
loop = false
volume_db = 0.0
stream_autoplay = false
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[node name="StreamPlayer" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 16 )
playing = false
loop = false
volume_db = 0.0
stream_autoplay = true
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[node name="Mmoedas" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 17 )
playing = false
loop = false
volume_db = 0.0
stream_autoplay = false
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[node name="mediacao" type="Node" parent="."]


[node name="sombra" type="ColorFrame" parent="mediacao"]

visible = false
visibility/opacity = 0.8
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 0.0
margin_right = 720.0
margin_bottom = 1280.0
color = Color( 0, 0, 0, 1 )

[node name="fundo" type="Sprite" parent="mediacao"]

visible = false
position = Vector2( 34, 338 )
scale = Vector2( 0.68, 0.68 )
texture = ExtResource( 18 )
centered = false

[node name="titulo" type="Label" parent="mediacao"]

visible = false
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 63.0
margin_top = 456.0
margin_right = 659.0
margin_bottom = 557.0
custom_fonts/font = ExtResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Alerta"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="texto" type="Label" parent="mediacao"]

visible = false
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 132.0
margin_top = 511.0
margin_right = 589.0
margin_bottom = 706.0
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "label"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sim" type="TouchScreenButton" parent="mediacao"]

visible = false
position = Vector2( 150, 700 )
normal = ExtResource( 21 )
pressed = ExtResource( 21 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="buttom" type="Label" parent="mediacao/sim"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 0.0
margin_top = 6.0
margin_right = 160.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 0.0742188, 0.0721893, 0.0721893, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Sim"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="nao" type="TouchScreenButton" parent="mediacao"]

visible = false
position = Vector2( 395, 700 )
normal = ExtResource( 21 )
pressed = ExtResource( 21 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="buttom" type="Label" parent="mediacao/nao"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 0.0
margin_top = 9.0
margin_right = 161.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 0.0742188, 0.0730591, 0.0730591, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "NÃ£o"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ok" type="TouchScreenButton" parent="mediacao"]

visible = false
position = Vector2( 275, 700 )
normal = ExtResource( 21 )
pressed = ExtResource( 21 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="buttom" type="Label" parent="mediacao/ok"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 1.0
margin_top = 8.0
margin_right = 160.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 0.121094, 0.118256, 0.118256, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "OK"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="mediacao"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[connection signal="pressed"  from="proximo"  to="." method="_on_proximo_pressed" binds=[  ]]

[connection signal="pressed"  from="anterior"  to="." method="_on_anterior_pressed" binds=[  ]]

[connection signal="pressed"  from="comprar"  to="." method="_on_comprar_pressed" binds=[  ]]

[connection signal="pressed"  from="mediacao/sim"  to="." method="_on_sim_pressed" binds=[  ]]

[connection signal="pressed"  from="mediacao/nao"  to="." method="_on_nao_pressed" binds=[  ]]

[connection signal="pressed"  from="mediacao/ok"  to="." method="_on_ok_pressed" binds=[  ]]
[editable path="poupanca"]
